d3d11videosink: set_render_rectangle() is not implemented
The video will be filled to the whole window regardless what set_render_rectangle() is set to when using d3d11videosink.
This function works fine in d3dvideosink.
Test case:
Using the sample code samples/VideoOverlay.cs in gstreamer-sharp, add the following line:
adapter.SetRenderRectangle(0, 0, 100, 100);
after line 153
.
Edited by Seungha Yang